fix vgap tasks

--- a/Implementation (Eclipse Oxygen 1)/Kanban-Board/src/com/dhbwGroup/kanban/styles/MainStylesheet.css
+++ b/Implementation (Eclipse Oxygen 1)/Kanban-Board/src/com/dhbwGroup/kanban/styles/MainStylesheet.css
@@ -18,10 +18,13 @@
 	-fx-padding: 10px;
 	-fx-alignment: top-center;
 	-fx-height: 100%;
-		
 }
 
-.columnHeader{
+.columnGridPane{
+
+}
+
+.columnHeaderGridPane{
 	-fx-padding: 20px;
    	-fx-font-family: "Arial ";
     -fx-font-weight: bold;
@@ -56,12 +59,18 @@
     
 }
 
+.columnTaskGridPane{
+	-fx-vgap: 10px;
+	-fx-hgap: 10px;
+	-fx-padding: 10px;
+	-fx-alignment: top-center;
+}
+
 .task{
 	-fx-border-color: black;
 	-fx-border-radius: 10px;
 	-fx-border-width: 3px;
-	-fx-padding: 15px;
-	-fx-hgap: 10px;
+	-fx-padding: 20px;
 	-fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
 	-fx-background-radius: 11px;
     -fx-font-family: "Arial Narrow";
@@ -70,7 +79,6 @@
 -fx-background-color: linear-gradient(#BF6123, #C56E07);
 
 }
-
 
 .taskTitle{
 
